--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,6 +1,3 @@
-# This workflow builds a Java project with Gradle, caches dependencies, publishes to GitHub Packages, and submits a dependency graph.
-# For more info: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle
 
 on:
@@ -14,35 +11,31 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-      packages: write  # Required to publish to GitHub Packages
+      packages: write
 
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK 17  # Updated to 17
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '17'  # Updated to 17
           distribution: 'temurin'
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4.0.0
 
-      # Ensure gradlew is executable
       - name: Make gradlew executable
         run: chmod +x ./gradlew
 
-      # Build the project
       - name: Build with Gradle Wrapper
         run: ./gradlew build
 
-      # Publish to GitHub Packages
       - name: Publish to GitHub Packages
         run: ./gradlew publish
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Token for authentication
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Optional: Upload artifacts for manual download
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -57,10 +50,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
+      - name: Set up JDK 17  # Updated to 17
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '17'  # Updated to 17
           distribution: 'temurin'
 
       - name: Generate and submit dependency graph
