--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,13 +14,15 @@ jobs:
       packages: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 17  # Updated to 17
+      - name: Set up JDK 23
         uses: actions/setup-java@v4
         with:
-          java-version: '17'  # Updated to 17
+          java-version: '23'
           distribution: 'temurin'
+          cache: gradle
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4.0.0
@@ -48,12 +50,13 @@ jobs:
       contents: write
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Set up JDK 17  # Updated to 17
+      - name: Set up JDK 23
         uses: actions/setup-java@v4
         with:
-          java-version: '17'  # Updated to 17
+          java-version: '23'
           distribution: 'temurin'
 
       - name: Generate and submit dependency graph
